Solved the CSS and html structure coding for the New Arrivals section of the Product segment. It was a challenging Inception scenario (or fractals) where there were divs within divs and each required flexbox to align properly. Now moving onto the Dress Collection segment.

--- a/css/mixins.project.scss
+++ b/css/mixins.project.scss
@@ -49,4 +49,143 @@
 	@include transformRotate(10deg);
 }
 
+@mixin themeButton1 {
+	margin:0;
+	padding: 0;
+
+	background: black;
+	// text-align: center;
+	width: 11.8125em;
+	height: 2.4375em;
+
+	//flexbox
+	@include flexboxSettings042215a;
+	justify-content:center;
+	align-content: center;
+	align-items: center;
+
+	position: relative;
+	z-index: 5;
+
+	p {
+		color: $themeYellow;
+		letter-spacing: 0.1em;
+		background: black;
+		// remove the default margin... went back to style.scss and removed margin-bottom from @mixin baseParagraphStyle
+		margin:0;
+	}
+
+	&::before {
+		@include slantSlash042815a1($themeYellow);
+	}
+}
+
+@mixin purchaseShader042815a1 {
+	// html structure
+	// div.purchaseShader
+	// 	p $99
+	// 	a(href="#") Add to Cart
+	
+	// html structure
+	// div.purchaseShader
+	// 	p $99
+	// 	a(href='#')
+	// 		div
+	// 			//- the div will hold the before element
+	// 			p Add to Cart
+
+	// div.purchaseShader {
+	// 	//flexbox
+	// 	@include flexboxSettings042215a;
+	// 	justify-content: flex-end;
+	// 	align-content: flex-end;
+	// 	align-items: center;
+
+	// 	a {
+	// 		margin-bottom: 10%;
+	// 	}
+	// }
+
+	div.purchaseShader {
+		//flexbox
+		@include flexboxSettings042215a;
+		justify-content: flex-end;
+		align-content: flex-end;
+		align-items: center;
+
+		background: $themeYellow;
+
+		// you need to maximize the width to allow enough space to expand
+		width: 100%;
+		height: auto;
+
+		// positioning
+		position: absolute;
+		top:0;
+		right:0;
+		left:0;
+		bottom:0;
+
+		// default status
+		// before parent:hover
+		// this must come last to override display:flex above
+		display: none;
+
+		a.button {
+			display: block;
+			margin-bottom: 15%;
+		}
+
+		div.button {
+			@include themeButton1;
+			margin-bottom: 10%;
+			width: 8.8125em;
+		}
+
+		p.price {
+			font-size: $basefontsize*2;
+			margin-bottom: 7%;
+			position: relative;
+
+			span {
+				position: absolute;
+				top:-24%;
+				left:-39%;
+				font-size: $basefontsize*1.3;
+			}
+		}
+	}	
+}
+
+@mixin productDivDimensions042815a1 {
+	// width: 209px;
+	// height: 212px;
+	width: 13.0625em;
+	height: 13.25em;
+	// border: 1px solid red;
+}
+
+@mixin productDivDimensions042815a2 ($colour) {
+	// width: 209px;
+	// height: 212px;
+	width: 13.0625em;
+	height: 13.25em;
+	border: 1px solid $colour;
+}
+
+@mixin backgroundImage042815a ($url) {
+	background-image: url($url);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+@mixin purchaseShaderDisplay042815a {
+	// requires that the parent element have the div.purchaseShader html inside already
+	&:hover > div.purchaseShader {
+		display: flex;
+	}
+}
+
+
 ///////////////////////////////////////////////
