--- a/css/style.scss
+++ b/css/style.scss
@@ -44,6 +44,10 @@ body {
 	background: $basebackcolor;
 	position: relative;
 	// z-index: 10;
+	
+	// custom add
+	letter-spacing: 0.1em;
+	font-family: $basefontfamily;
 }
 
 .wrapper {
@@ -63,7 +67,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	border: 0;
 	outline: 0;
 	font-size: 100%;
-	font-family: $basefontfamily;
 	vertical-align: baseline;
 	background: transparent;
 }
